# english_mate_bot

./: .gitignore  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6ed16a4b45f1_user.py
src/: main.py
src/alembic/: env.py
src/bot/handlers/: __init__.py  start.py
src/bot/middleware/: session.py
src/config/: settings.py  template.env
src/core/: db_helper.py
src/core/models/: __init__.py  base.py  user.py
