[project]
name = "english-mate-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.26.0",
    "aiohttp-socks>=0.11.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standrard]>=0.42.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py314"
line-length = 120
indent-width = 4
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint]
preview = true

select = [
    "UP",
    "I",
    "E",
    "W",
    "F",
    "B",
    "C4",
    "S",
    "BLE",
    "T20",
    "T10",
    "PT",
    "RUF",
    "DTZ",
    "ERA",
    "FURB",
]

ignore = [
    "C408",
    "RUF001",
    "RUF002",
    "RUF003",
    "S110",
    "F403",
    "F405",
    "RUF012",
    "ERA001",
    "W292",
    "RUF067"
]

exclude = [
    "src/tests/**",
    "**/migrations/**",
    "alembic/versions/*"
]

fixable = [
    "ALL",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true
